# t1000

./: .gitignore  README.md  agents.md  config.example.yaml  core_program_guidance.md  pyproject.toml
.cursor/rules/: agent-contract.mdc  agents-reference.mdc  cli-domain.mdc  commitzen.mdc  github-integrations.mdc  guardrails-domain.mdc  integrations-domain.mdc  session-capture-domain.mdc  session-observability.mdc  state-idempotency.mdc
src/j2pr/: agent.py  artifacts.py  cli.py  config.py  footer.py  github.py  guardrails.py  jira.py  logging.py  mapping.py  repo.py  session_capture.py  state.py  util.py
tests/: test_config.py  test_footer.py  test_guardrails.py  test_mapping.py  test_repo_inference.py  test_state.py
