[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "j2pr"
version = "0.1.0"
description = "Jira to PR CLI orchestrator using Cursor agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "J2PR Team"}
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.31",
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
j2pr = "j2pr.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
